# fastapi

./: auth.py  crud.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
